--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body{
 }
 body{
   font-size: 8px;
+  width: 100%;
 }
 
 
@@ -52,12 +53,14 @@ body{
 .wrapper.container-fluid{
     position: relative;
     overflow: hidden;
-    width: 100%;
+    /* max-width: 1720px; */
     top: 0;
     left: 0;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    background-color:rgba(161, 190, 151, 0.2);                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               
+    background-color:rgba(0, 0, 0, 0.7);         
+    color:rgba(255,255,255, 1);
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
 }
 
 
@@ -80,9 +83,9 @@ body{
     left: 0;
     width: 100%;
     z-index: 1000;
-    background-color:rgba(0,0,0,0.5);
+    background-color:rgba(0,0,0,0.7);
     transition: transform 0.7s ease-in-out;
-    margin: 0;
+    margin: 0 auto;
     border-bottom: 2px solid rgba(0,0,0,0.5);
 }
 
@@ -140,7 +143,8 @@ display: flex;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
-    
+    letter-spacing: 2px;
+    padding: 7px;
 }
 .title {
     width:  100%;
@@ -149,7 +153,7 @@ display: flex;
 }
 .header__subtitle {
     width:  100%;
-    font-size: 1em;
+    font-size: 0.7em;
     color:rgba(255, 255, 255, 1);
 }
 
@@ -157,12 +161,16 @@ display: flex;
     display: flex;
     align-items:center;
  flex-direction: column;
+ padding: 7px;
+ letter-spacing: 2px;
+    font-size: 0.8em;
 }
 .header__tel p{
     color:rgba(255, 255, 255, 1);
 }
 
 .phone__number{
+    
     display: flex;
     align-items:center;
     text-decoration: none;
@@ -357,7 +365,7 @@ display: flex;
     padding:0px;
     font-weight: 900;
 }
-.find__travel .btn {
+/* .find__travel .btn {
     max-width:500px ;
     font-size: 1.5em;
     font-weight: 700;
@@ -370,7 +378,7 @@ display: flex;
     border:5px solid rgba(231, 220, 74, 1);
     border-radius: 15px/15px;
     box-shadow:0 0 10px rgba(0,0,0,0.5);
-}
+} */
 
 .accent__title {
     display: inline;
@@ -428,22 +436,22 @@ display: flex;
 .achievments__list{
     justify-content: space-between;
    text-align: center;
-   padding: 10px;
-   /* background-color:rgba(255,255,255,0.3); */
+   padding:40px  20px;
+   background-color:rgba(0,0,0,0.5);
 }
 .achievments__list__title {
-    margin-bottom: 20px;
+   
 }
 .achievment {
     position: relative;
     border:1px solid rgba(0,0,0,0.2);
     border-radius:10px/10px;
     text-align: center;
-    box-shadow:0 0 10px rgba(0,0,0,0.5);
+    box-shadow:0 0 1px rgba(0,0,0,1);
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
-   padding: 20px 0px 50px 0px;
+   padding: 20px 10px 50px 10px;
 }
 
 .achievment:nth-of-type(2){
@@ -502,32 +510,46 @@ rgba(38, 60, 116, 1) */
 }
 
 .booking__steps__list {
-    justify-content: space-between;
    text-align: center;
+   padding: 30px;
 }
 
 .booking__step__list__title {
+
 }
 
 .booking__step {
     border:1px solid rgba(0,0,0,0.2);
-
+     min-height: 350px;
+     background-color:rgba(188, 212, 211, 1);
 }
 
 .booking__step__title {
     margin: 30px 0;
 }
-.descr__text {
+.booking__step__text {
+ text-align: center;
+ padding: 30px; 
+ font-size: 1.5em;
+ font-weight: 700;
 }
 .booking__consult__link{
-    padding: 20px; 
+    padding: 30px; 
 }
+.find__travel .btn,
 .booking__consult__link .btn {
-    font-size: 1.5em;
-    margin: 10px auto;
-    border:5px solid rgba(231, 220, 74, 1);
+    font-size: 1em;
+    font-weight: 800;
+    letter-spacing: 4px;
+    padding: 10px 15px;
+    text-transform: uppercase;
+    background-color:rgba(0, 0, 0, 0.1);
+    border:3px solid rgba(231, 220, 74, 1);
     border-radius: 15px/15px;
-    box-shadow:0 0 10px rgba(0,0,0,0.5);
+    text-shadow: 0 0 2px rgba(255, 255, 255, 1);
+    box-shadow:0 0 5px rgba(255,255,255,0.5)
+    inset 0 0 15px rgba(0, 0, 0, 1);
+    color:rgba(231, 220, 74, 1);
 }
 
 /*______________________________________________*/
@@ -576,16 +598,18 @@ rgba(38, 60, 116, 1) */
   .section__title{
     font-size: 1.5em;
     text-align: center;
-    padding: 15px;
-    font-weight: 700;
+    max-width: 90%;
+    padding: 5px;
+    margin:0px auto 50px auto;
+    font-weight: 600;
     letter-spacing: 5px;
     text-transform: uppercase;
     font-style: italic;
-    text-shadow:0px 0px 1px rgba(0,0,0,1);
-    background-color: rgba(0,0,0,0.2);
+    text-shadow:0px 0px 1px rgba(255,255,255,1);
+    background-color: rgba(255,255,255,0.2);
     color:rgba(255,255,255,1);
-    border-bottom:3px solid rgba(255,255,255,1);
-    border-top:3px solid rgba(255,255,255,1);
+    border-bottom:2px solid rgba(0,0,0,1);
+    /* border-top:1px solid rgba(0,0,0,1); */
 
 }
 
@@ -1007,7 +1031,7 @@ width: 270px;
     bottom: 0;
     overflow: hidden;
     margin: 0 auto;
-    background-color:rgba(0,0,0,0.3);
+    background-color:rgba(255,255,255,0.5);
     padding: 20px;
 }
 
